--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,39 +2,32 @@
 @tailwind components;
 @tailwind utilities;
 
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,600;0,700;0,800;0,900;1,300;1,400;1,700;1,800;1,900&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap");
-
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-  font-family: "Quicksand", sans-serif;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+.truncate-last {
+    display: -webkit-box;
+    -webkit-line-clamp: 3; /* Jumlah baris yang ingin Anda tampilkan sebelum truncate */
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    max-height: 5em;
+    @media screen and (min-width: 768px) {
+      max-height: 4.5em; /* Untuk layar dengan lebar minimal 768px, tampilkan lebih banyak teks */
+    }
+  
+    @media screen and (min-width: 1024px) {
+      max-height: 5em; /* Untuk layar dengan lebar minimal 1024px, tampilkan lebih banyak teks */
+    }
   }
-}
-
-body {
-  font-family: var(--font-quicksand);
-}
-/* body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-    transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-} */
-
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
+  
+  .truncate-last-2 {
+    display: -webkit-box;
+    -webkit-line-clamp: 2; /* Jumlah baris yang ingin Anda tampilkan sebelum truncate */
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    max-height: 3em;
+    @media screen and (min-width: 768px) {
+      max-height: 3.5em; /* Untuk layar dengan lebar minimal 768px, tampilkan lebih banyak teks */
+    }
+  
+    @media screen and (min-width: 1024px) {
+      max-height: 3em; /* Untuk layar dengan lebar minimal 1024px, tampilkan lebih banyak teks */
+    }
   }
-}
