--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,32 +2,35 @@
 @tailwind components;
 @tailwind utilities;
 
+body {
+  @apply bg-white dark:bg-black;
+}
 .truncate-last {
-    display: -webkit-box;
-    -webkit-line-clamp: 3; /* Jumlah baris yang ingin Anda tampilkan sebelum truncate */
-    -webkit-box-orient: vertical;
-    overflow: hidden;
-    max-height: 5em;
-    @media screen and (min-width: 768px) {
-      max-height: 4.5em; /* Untuk layar dengan lebar minimal 768px, tampilkan lebih banyak teks */
-    }
-  
-    @media screen and (min-width: 1024px) {
-      max-height: 5em; /* Untuk layar dengan lebar minimal 1024px, tampilkan lebih banyak teks */
-    }
+  display: -webkit-box;
+  -webkit-line-clamp: 3; /* Jumlah baris yang ingin Anda tampilkan sebelum truncate */
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  max-height: 5em;
+  @media screen and (min-width: 768px) {
+    max-height: 4.5em; /* Untuk layar dengan lebar minimal 768px, tampilkan lebih banyak teks */
   }
-  
-  .truncate-last-2 {
-    display: -webkit-box;
-    -webkit-line-clamp: 2; /* Jumlah baris yang ingin Anda tampilkan sebelum truncate */
-    -webkit-box-orient: vertical;
-    overflow: hidden;
-    max-height: 3em;
-    @media screen and (min-width: 768px) {
-      max-height: 3.5em; /* Untuk layar dengan lebar minimal 768px, tampilkan lebih banyak teks */
-    }
-  
-    @media screen and (min-width: 1024px) {
-      max-height: 3em; /* Untuk layar dengan lebar minimal 1024px, tampilkan lebih banyak teks */
-    }
+
+  @media screen and (min-width: 1024px) {
+    max-height: 5em; /* Untuk layar dengan lebar minimal 1024px, tampilkan lebih banyak teks */
   }
+}
+
+.truncate-last-2 {
+  display: -webkit-box;
+  -webkit-line-clamp: 2; /* Jumlah baris yang ingin Anda tampilkan sebelum truncate */
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  max-height: 3em;
+  @media screen and (min-width: 768px) {
+    max-height: 3.5em; /* Untuk layar dengan lebar minimal 768px, tampilkan lebih banyak teks */
+  }
+
+  @media screen and (min-width: 1024px) {
+    max-height: 3em; /* Untuk layar dengan lebar minimal 1024px, tampilkan lebih banyak teks */
+  }
+}
