--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,12 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-@import "swiper/css";
-@import "swiper/css/effect-cards";
-@import "swiper/css/pagination";
+
 body {
-  @apply bg-white dark:bg-black;
+  @apply bg-white dark:bg-black text-gray-900 dark:text-gray-100;
 }
+
+
 .truncate-last {
   display: -webkit-box;
   -webkit-line-clamp: 3; /* Jumlah baris yang ingin Anda tampilkan sebelum truncate */
