--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -36,6 +36,21 @@ body {
   }
 }
 
+.truncate-last-1 {
+  display: -webkit-box;
+  -webkit-line-clamp: 1; /* Jumlah baris yang ingin Anda tampilkan sebelum truncate */
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  max-height: 3em;
+  @media screen and (min-width: 768px) {
+    max-height: 3.5em; /* Untuk layar dengan lebar minimal 768px, tampilkan lebih banyak teks */
+  }
+
+  @media screen and (min-width: 1024px) {
+    max-height: 3em; /* Untuk layar dengan lebar minimal 1024px, tampilkan lebih banyak teks */
+  }
+}
+
 /* Infinite Running Card */
 .marquee {
   display: flex;
