scroll on client running photo

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -55,7 +55,7 @@ body {
 /* Infinite Running Card */
 .marquee {
   display: flex;
-  overflow: hidden;
+  overflow: scroll;
   width: 100%;
   position: relative;
 }
