--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -164,3 +164,54 @@ body {
   border-radius: 50%;
   box-shadow: 17px -17px 0 #000000;
 }
+
+
+/* Reusable shimmer animation */
+.shimmer {
+  position: relative;
+  overflow: hidden;
+}
+
+.shimmer::before {
+  content: '';
+  position: absolute;
+  top: -100%;
+  right: -100%;
+  width: 200%;
+  height: 200%;
+  background: linear-gradient(225deg, rgba(255, 255, 255, 0) 20%, rgba(47, 47, 47, 0.3) 50%, rgba(255, 255, 255, 0) 100%);
+  transition: transform 0.8s ease-in-out;
+  transform: translate(100%, -100%);
+}
+
+.shimmer:hover::before,
+.group:hover .shimmer::before {
+  transform: translate(-100%, 100%);
+  transition: transform 0.9s ease-in-out;
+}
+
+/* Shimmer animation for infinite effect */
+.shimmer-animate {
+  position: relative;
+  overflow: hidden;
+}
+
+.shimmer-animate::before {
+  content: '';
+  position: absolute;
+  top: -100%;
+  right: -100%;
+  width: 200%;
+  height: 200%;
+  background: linear-gradient(225deg, rgba(255, 255, 255, 0) 20%, rgba(47, 47, 47, 0.3) 50%, rgba(255, 255, 255, 0) 100%);
+  animation: shimmerAnimation 2.5s infinite;
+}
+
+@keyframes shimmerAnimation {
+  0% {
+    transform: translate(100%, -100%);
+  }
+  100% {
+    transform: translate(-100%, 100%);
+  }
+}
