--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -215,3 +215,132 @@ body {
     transform: translate(-100%, 100%);
   }
 }
+.gradient-blur {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  pointer-events: none;
+  border-bottom-right-radius: 1.5rem;
+  border-bottom-left-radius: 1.5rem;
+}
+
+.gradient-blur > div,
+.gradient-blur::before,
+.gradient-blur::after {
+  position: absolute;
+  inset: 0;
+}
+
+.gradient-blur::before {
+  content: "";
+  z-index: 1;
+  border-bottom-right-radius: 1.5rem;
+  border-bottom-left-radius: 1.5rem;
+  backdrop-filter: blur(0.5px);
+  mask: linear-gradient(
+    to bottom,
+    rgba(255, 255, 255, 0) 0%,
+    rgba(255, 255, 255, 1) 12.5%,
+    rgba(255, 255, 255, 1) 25%,
+    rgba(255, 255, 255, 0) 37.5%
+  );
+}
+
+.gradient-blur > div:nth-of-type(1) {
+  z-index: 2;
+  border-bottom-right-radius: 1.5rem;
+  border-bottom-left-radius: 1.5rem;
+  backdrop-filter: blur(1px);
+  mask: linear-gradient(
+    to bottom,
+    rgba(255, 255, 255, 0) 12.5%,
+    rgba(255, 255, 255, 1) 25%,
+    rgba(255, 255, 255, 1) 37.5%,
+    rgba(255, 255, 255, 0) 50%
+  );
+}
+
+.gradient-blur > div:nth-of-type(2) {
+  z-index: 3;
+  border-bottom-right-radius: 1.5rem;
+  border-bottom-left-radius: 1.5rem;
+  backdrop-filter: blur(2px);
+  mask: linear-gradient(
+    to bottom,
+    rgba(255, 255, 255, 0) 25%,
+    rgba(255, 255, 255, 1) 37.5%,
+    rgba(255, 255, 255, 1) 50%,
+    rgba(255, 255, 255, 0) 62.5%
+  );
+}
+
+.gradient-blur > div:nth-of-type(3) {
+  z-index: 4;
+  border-bottom-right-radius: 1.5rem;
+  border-bottom-left-radius: 1.5rem;
+  backdrop-filter: blur(4px);
+  mask: linear-gradient(
+    to bottom,
+    rgba(255, 255, 255, 0) 37.5%,
+    rgba(255, 255, 255, 1) 50%,
+    rgba(255, 255, 255, 1) 62.5%,
+    rgba(255, 255, 255, 0) 75%
+  );
+}
+
+.gradient-blur > div:nth-of-type(4) {
+  z-index: 5;
+  border-bottom-right-radius: 1.5rem;
+  border-bottom-left-radius: 1.5rem;
+  backdrop-filter: blur(8px);
+  mask: linear-gradient(
+    to bottom,
+    rgba(255, 255, 255, 0) 50%,
+    rgba(255, 255, 255, 1) 62.5%,
+    rgba(255, 255, 255, 1) 75%,
+    rgba(255, 255, 255, 0) 87.5%
+  );
+}
+
+.gradient-blur > div:nth-of-type(5) {
+  z-index: 6;
+  border-bottom-right-radius: 1.5rem;
+  border-bottom-left-radius: 1.5rem;
+  backdrop-filter: blur(16px);
+  mask: linear-gradient(
+    to bottom,
+    rgba(255, 255, 255, 0) 62.5%,
+    rgba(255, 255, 255, 1) 75%,
+    rgba(255, 255, 255, 1) 87.5%,
+    rgba(255, 255, 255, 0) 100%
+  );
+}
+
+.gradient-blur > div:nth-of-type(6) {
+  z-index: 7;
+  border-bottom-right-radius: 1.5rem;
+  border-bottom-left-radius: 1.5rem;
+  backdrop-filter: blur(32px);
+  mask: linear-gradient(
+    to bottom,
+    rgba(255, 255, 255, 0) 75%,
+    rgba(255, 255, 255, 1) 87.5%,
+    rgba(255, 255, 255, 1) 100%
+  );
+}
+
+.gradient-blur::after {
+  content: "";
+  z-index: 8;
+  border-bottom-right-radius: 1.5rem;
+  border-bottom-left-radius: 1.5rem;
+  backdrop-filter: blur(10px);
+  mask: linear-gradient(
+    to bottom,
+    rgba(255, 255, 255, 0) 87.5%,
+    rgba(255, 255, 255, 1) 1000%
+  );
+}
+
+
