--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -343,4 +343,19 @@ body {
   );
 }
 
-
+.gradient-blur2 {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  pointer-events: none;
+  border-bottom-right-radius: 1.5rem;
+  border-bottom-left-radius: 1.5rem;
+  backdrop-filter: blur(10px);
+  mask-image: linear-gradient(
+    to bottom,
+    rgba(255, 255, 255, 0) 0%,
+    rgba(255, 255, 255, 1) 50%,
+    rgba(255, 255, 255, 1) 100%
+  );
+}
