--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,13 @@
 @tailwind components;
 @tailwind utilities;
 
+:root{
+  background: #00000000;
+}
+
+.bg-root {
+  @apply bg-white dark:bg-black;
+}
 body {
   @apply bg-white dark:bg-black text-gray-900 dark:text-gray-100;
 }
