--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,9 +1,8 @@
 @import "tailwindcss";
 @plugin "daisyui";
 @plugin "@tailwindcss/typography";
-@source inline("opacity-100 scale-100 translate-y-0");
-@source inline("opacity-0 scale-95 translate-y-4");
-@source inline("duration-300 duration-500 ease-in-out");
+@source inline("{opacity-0,opacity-100} {scale-95,scale-100} {translate-y-0,translate-y-4} {duration-200,duration-300} {ease-in,ease-out}");
+
 @theme {
   /* Color */
   --color-mainColor: #6b1e9c;
