--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -16,6 +16,13 @@
   --color-lightColor: #f1f1f1;
   --color-secondaryLight: #e3e3e3;
 
+  /* go space */
+  --color-goPurple: #864AF9;
+  --color-goYellow: #FFD35A;
+  --radius-parent: 32px ;
+  --radius-children: 24px  ;
+  --radius-input: 8px;
+
   /* BoxShadow */
   --shadow-custom: rgba(17, 17, 26, 0.1) 0px 4px 16px,
     rgba(17, 17, 26, 0.05) 0px 8px 32px;
