fix(go-space): banner and whyUs sections responsiveness

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,6 +18,7 @@
 
   /* go space */
   --color-goPurple: #864AF9;
+  --color-goPurple-secondary: #E9E3FA;
   --color-goYellow: #FFD35A;
   --radius-parent: 32px ;
   --radius-children: 24px  ;
