--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,6 +5,21 @@
 @plugin "@tailwindcss/typography";
 @source inline("{opacity-0,opacity-100} {scale-95,scale-100} {translate-y-0,translate-y-4} {duration-200,duration-300} {ease-in,ease-out}");
 
+html, body {
+  overflow-x: hidden;
+}
+
+.hide-scrollbar {
+  /* display: inline-flex; */
+  /* overflow-x: scroll; */
+  /* scroll-behavior: smooth; */
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+.hide-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+
 .promo-margin {
   @apply mx-4 sm:mx-8 md:mx-12
 }
