--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,7 +5,8 @@
 @plugin "@tailwindcss/typography";
 @source inline("{opacity-0,opacity-100} {scale-95,scale-100} {translate-y-0,translate-y-4} {duration-200,duration-300} {ease-in,ease-out}");
 
-html, body {
+html,
+body {
   overflow-x: hidden;
 }
 
@@ -20,15 +21,25 @@ html, body {
   display: none;
 }
 
+.margin {
+  @apply md:mx-24 mx-5;
+}
+
+.spacing {
+  @apply md:py-20 py-10;
+}
+
 .promo-margin {
-  @apply mx-4 sm:mx-8 md:mx-12
+  @apply mx-4 sm:mx-8 md:mx-12;
 }
 
 button {
-  @apply cursor-pointer
+  @apply cursor-pointer;
 }
 
-.article-content h1, .article-content h2, .article-content h3 {
+.article-content h1,
+.article-content h2,
+.article-content h3 {
   margin-top: 2rem;
   margin-bottom: 1rem;
 }
@@ -80,11 +91,11 @@ button {
   --color-secondaryLight: #e3e3e3;
 
   /* go space */
-  --color-goPurple: #864AF9;
-  --color-goPurple-secondary: #E9E3FA;
-  --color-goYellow: #FFD35A;
-  --radius-parent: 32px ;
-  --radius-children: 24px  ;
+  --color-goPurple: #864af9;
+  --color-goPurple-secondary: #e9e3fa;
+  --color-goYellow: #ffd35a;
+  --radius-parent: 32px;
+  --radius-children: 24px;
   --radius-input: 8px;
 
   /* BoxShadow */
@@ -246,7 +257,7 @@ body {
 
 /* Hide scrollbar for IE, Edge and Firefox */
 .noBar {
-  -ms-overflow-style: none !important;   /* IE and Edge */
+  -ms-overflow-style: none !important; /* IE and Edge */
   scrollbar-width: none !important; /* Firefox */
 }
 
@@ -371,12 +382,7 @@ body {
 .shimmer-text {
   position: relative;
   color: transparent;
-  background: linear-gradient(
-    90deg,
-    #333 25%,
-    #bababa 50%,
-    #333 75%
-  );
+  background: linear-gradient(90deg, #333 25%, #bababa 50%, #333 75%);
   background-size: 200% 100%;
   -webkit-background-clip: text;
   background-clip: text;
@@ -444,16 +450,15 @@ body {
   inset: 0;
   z-index: 0;
 
-  background-image:
-    linear-gradient(
+  background-image: linear-gradient(
       170deg,
-      #F2F2F2 0%,
-      #F2F2F2 40%,
-      #F1E3A4 50%,
-      #D899F8 75%,
-      #EDA8E0 80%,
-      #F3B3DD 90%,
-      #E7F6FD 100%
+      #f2f2f2 0%,
+      #f2f2f2 40%,
+      #f1e3a4 50%,
+      #d899f8 75%,
+      #eda8e0 80%,
+      #f3b3dd 90%,
+      #e7f6fd 100%
     ),
     linear-gradient(#000000 1.8px, transparent 1.8px),
     linear-gradient(to right, #000000 1.8px, #ffffff 1.8px);
@@ -466,13 +471,13 @@ body {
 .gradient-bg {
   background: linear-gradient(
     160deg,
-    #F2F2F2 0%,
-    #F2F2F2 40%,
+    #f2f2f2 0%,
+    #f2f2f2 40%,
     #f5e9b3 55%,
-    #D899F8 80%,
+    #d899f8 80%,
     #e0abfa 85%,
     #e8bdfe 90%,
-    #E7F6FD 100%
+    #e7f6fd 100%
   );
   width: 100%;
   height: 100%;
@@ -482,9 +487,8 @@ body {
 .pattern-overlay {
   background-color: transparent;
   opacity: 0.1;
-  background-image: 
-    linear-gradient(#F2F2F2 1.8px, transparent 1.8px),
-    linear-gradient(to right, #F2F2F2 1.8px, transparent 1.8px);
+  background-image: linear-gradient(#f2f2f2 1.8px, transparent 1.8px),
+    linear-gradient(to right, #f2f2f2 1.8px, transparent 1.8px);
   background-size: 36px 36px;
   width: 100%;
   height: 100%;
@@ -571,3 +575,42 @@ body {
   }
 }
 
+.linear-blur-to-b {
+  width: 100%;
+  pointer-events: none;
+  border-bottom-right-radius: 0rem;
+  border-bottom-left-radius: 0rem;
+  backdrop-filter: blur(5px);
+  mask-image: linear-gradient(
+    to top,
+    rgba(255, 255, 255, 0) 0%,
+    rgba(255, 255, 255, 1) 70%,
+    rgba(255, 255, 255, 1) 100%
+  );
+  -webkit-mask-image: linear-gradient(
+    to top,
+    rgba(255, 255, 255, 0) 0%,
+    rgba(255, 255, 255, 1) 70%,
+    rgba(255, 255, 255, 1) 100%
+  );
+}
+
+.linear-blur-to-t {
+  width: 100%;
+  pointer-events: none;
+  border-bottom-right-radius: 0rem;
+  border-bottom-left-radius: 0rem;
+  backdrop-filter: blur(15px);
+  mask-image: linear-gradient(
+    to bottom,
+    rgba(255, 255, 255, 0) 0%,
+    rgba(255, 255, 255, 1) 70%,
+    rgba(255, 255, 255, 1) 100%
+  );
+  -webkit-mask-image: linear-gradient(
+    to bottom,
+    rgba(255, 255, 255, 0) 0%,
+    rgba(255, 255, 255, 1) 70%,
+    rgba(255, 255, 255, 1) 100%
+  );
+}
